packages/yasr/src/plugins/error/index.scss
.yasr {
  .errorResult {
    .errorHeader {
      // display:flex;
      overflow: hidden;
      .yasr_tryQuery {
        float: right;
        // color: #428bca;
        text-decoration: none;
        padding-top: 3px;
        padding-bottom: 3px;
      }
      span.status {
        display: inline-block;
        padding: 0.35em 0.5rem;
        font-size: 75%;
        font-weight: 600;
        line-height: 1.35;
        text-align: center;
        white-space: nowrap;
        vertical-align: baseline;
        border-radius: 0.25em;
        color: #fff;
        background-color: #dc3545;
      }
    }

    padding: 10px;

    pre {
      display: block;
      padding: 10px;
      margin: 10px 0 10px;
      font-size: 13px;
      line-height: 1.42857;
      word-break: break-all;
      word-wrap: break-word;
      color: #333;
      background-color: #f5f5f5;
      border: 1px solid #ccc;
      border-radius: 4px;
    }
    .redOutline {
      color: #a94442;
      background-color: #f2dede;
      margin-top: 10px;
      padding: 5px 1em;
      border: 1px solid #ebccd1;
      border-radius: 4px;
    }
  }
}

